[package]
name = "sputnikvm-libffi"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Alexey Sudachen <alexey@sudachen.name>"]
description = "Classic Go-Ethereum adapter to SputnikVM"
repository = "https://github.com/ethereumproject/gethsvm"
keywords = ["allow(ctypes)", "std"]

[lib]
crate_type = ["staticlib"]
name = "sputnikvm"

[dependencies]
sputnikvm = { path = "deps/sputnikvm", version = "0.9.1" }
secp256k1-plus = { path = "deps/secp256k1-plus", version = "0.5.7", optional = true }
etcommon-bigint = { path = "deps/etcommon-bigint", version = "0.2.9", optional = true }
etcommon-block = { path = "deps/etcommon-block", version = "0.3", optional = true }
etcommon-block-core = { path = "deps/etcommon-block-core", version = "0.1", optional = true }
libc = "0.2"

[features]
c-secp256k1 = ["secp256k1-plus", "etcommon-block/c-secp256k1"]
std = ["etcommon-block-core/std", "etcommon-bigint/std", "etcommon-block"]
default = ["std", "c-secp256k1"]



